# Fastapi_users_test

./: .env  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/models/: user.py
app/schemas/: __init__.py  user.py
app/users/: auth.py  deps.py  manager.py
migrations/: env.py
migrations/versions/: 1a18dcfa116c_add_user_model.py
