[project]
name = "fastapi_u"
version = "0.1.0"
description = ""
authors = [
    {name = "Mukhammad(Cryf1re)"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi-users[oauth,redis,sqlalchemy] (>=14.0.1,<15.0.0)",
    "uuid (>=1.30,<2.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
